--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,31 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Skeleton application demoing Heroku and Flask integration.">
-    <meta name="author" content="@gotoariel">
-    <!-- <link rel="icon" href="favicon.ico"> -->
-
-    <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-left">
-          <h2>Hello, World!</h2>
-          <ul>
-            <li><a href="/about">About</a></li>
-            <li><a target="_blank" href="https://www.heroku.com/">Heroku</a></li>
-            <li><a target="_blank" href="http://flask.pocoo.org/">Flask</a></li>
-            <li><a target="_blank" href="http://jinja.pocoo.org/docs/2.9/">Jinja2</a></li>
-            <li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-          </ul>
-        </div>
-      </div>
+<title>Stock Prices</title>
+<link rel=stylesheet type=text/css href='{{url_for('static', filename='style.css')}}'>
+<div class=page>
+    <h1>Stock Prices</h1>
+    <div class=metanav>
+        
+        <h4>
+            Please enter start and end dates in the following format:
+            <br />
+            MM-DD-YYY
+        </h4>
+        
+        <form id='userinput' method='post' action='index'>
+            <p>
+            Start date: <input type='text' name='start_date' />
+            </p>
+            
+            <p>
+            End date: <input type='text' name='end_date' />
+            </p>
+            
+            <p>
+            <input type='submit' value='Submit' />
+            </p>
+            
+        </form>
+    
     </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </body>
+</div>
 </html>
