--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <h4>
             Please enter start and end dates in the following format:
             <br />
-            MM-DD-YYY
+            YYY-MM-DD
         </h4>
         
         <form id='userinput' method='post' action='index'>
