--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <h4>
             Please enter start and end dates in the following format:
             <br />
-            YYY-MM-DD
+            YYYY-MM-DD
         </h4>
         
         <form id='userinput' method='post' action='index'>
@@ -19,6 +19,39 @@
             <p>
             End date: <input type='text' name='end_date' />
             </p>
+            
+            Company:
+            <select name="company" size="1">
+                <option value="HD">Home Depot Inc.</option>
+                <option value="DIS">The Walt Disney Company</option>
+                <option value="MSFT">Microsoft Corporation</option>
+                <option value="BA">The Boeing Company</option>
+                <option value="MMM">3M Company</option>
+                <option value="PFE">Pfizer Inc.</option>
+                <option value="NKE">Nike Inc.</option>
+                <option value="JNJ">Johnson &amp; Johnson</option>
+                <option value="MCD">McDonald's Corporation</option>
+                <option value="INTC">Intel Corporation</option>
+                <option value="XOM">Exxon Mobil Corporation</option>
+                <option value="GS">Goldman Sachs Group Inc.</option>
+                <option value="JPM">JP Morgan Chase &amp; Co.</option>
+                <option value="AXP">American Express Company</option>
+                <option value="V">Visa Inc.</option>
+                <option value="IBM">International Business Machines Corporation</option>
+                <option value="UNH">UnitedHealth Group Incorporated</option>
+                <option value="PG">Procter &amp; Gamble Company</option>
+                <option value="GE">General Electric Company</option>
+                <option value="KO">Coca-Cola Company</option>
+                <option value="CSCO">Cisco Systems Inc.</option>
+                <option value="CVX">Chevron Corporation</option>
+                <option value="CAT">Caterpillar Inc.</option>
+                <option value="MRK">Merck &amp; Company Inc.</option>
+                <option value="WMT">Walmart Inc.</option>
+                <option value="VZ">Verizon Communications Inc.</option>
+                <option value="UTX">United Technologies Corporation</option>
+                <option value="TRV">The Travelers Companies Inc.</option>
+                <option value="AAPL">Apple Inc.</option>
+            </select>
             
             <p>
             <input type='submit' value='Submit' />
