--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,21 @@
     <h1>Stock Prices</h1>
     <div class=metanav>
         
+        <!--
         <h4>
             Please enter start and end dates in the following format:
             <br />
             YYYY-MM-DD
         </h4>
+         -->
         
         <form id='userinput' method='post' action='index'>
             <p>
-            Start date: <input type='text' name='start_date' />
+            Start date: <input type='text' name='start_date' placeholder='YYYY-MM-DD' />
             </p>
             
             <p>
-            End date: <input type='text' name='end_date' />
+            End date: <input type='text' name='end_date' placeholder='YYYY-MM-DD' />
             </p>
             
             Company:
